--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -68,7 +68,8 @@ spring.jpa.hibernate.ddl-auto = create
 #spring.h2.console.enabled=true
 
 ## Mysql
-##CREATE SCHEMA `employee_management_system` DEFAULT CHARACTER SET utf8 COLLATE utf8_turkish_ci ;
+##CREATE SCHEMA `ecodation_blog` DEFAULT CHARACTER SET utf8 COLLATE utf8_turkish_ci ;
+## use ecodation_blog;
 spring.datasource.url=jdbc:mysql://localhost:3306/ecodation_blog?createDatabaseIfNotExist=true&autoReconnect=true&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=root
