--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -60,20 +60,20 @@ spring.jpa.hibernate.ddl-auto = update
 
 ##Current Working Directory
 ## http://localhost:8080/h2-console
-#spring.datasource.driverClassName=org.h2.Driver
-#spring.datasource.url=jdbc:h2:file:./memory_persist/ecodation_blog
-#spring.datasource.username=root
-#spring.datasource.password=root
-#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-#spring.h2.console.enabled=true
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.url=jdbc:h2:file:./memory_persist/ecodation_blog
+spring.datasource.username=root
+spring.datasource.password=root
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.h2.console.enabled=true
 
 ## Mysql
 ##CREATE SCHEMA `ecodation_blog` DEFAULT CHARACTER SET utf8 COLLATE utf8_turkish_ci ;
 ## use ecodation_blog;
-spring.datasource.url=jdbc:mysql://localhost:3306/ecodation_blog?createDatabaseIfNotExist=true&autoReconnect=true&useSSL=false
-spring.datasource.username=root
-spring.datasource.password=root
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+#spring.datasource.url=jdbc:mysql://localhost:3306/ecodation_blog?createDatabaseIfNotExist=true&autoReconnect=true&useSSL=false
+#spring.datasource.username=root
+#spring.datasource.password=root
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 
 
 ## Postgresql
